--- a/trunk/configuration/acl.ini
+++ b/trunk/configuration/acl.ini
@@ -133,63 +133,6 @@
 	user_user.allow.0 = ""
 	
 	
-[member]
-	calendar_index.allow.0 = ""
-	
-	default_actions.allow.0 = ""
-	
-	default_error.allow.0 = ""
-	
-	default_index.allow.0 = ""
-	
-	gallery_image.allow.0 = "thumb"
-	
-	gallery_index.allow.0 = "index"
-	gallery_index.allow.1 = "privilage_view_guest"
-	gallery_index.allow.2 = "gallery"
-	gallery_index.allow.3 = "privilage_view_member"
-	
-	gallery_index.deny.0 = "privilage_view_special"
-	
-	group_image.allow.0 = "thumb"
-	
-	group_index.allow.0 = "display"
-	group_index.allow.1 = "gallery"
-	group_index.allow.2 = "index"
-	group_index.allow.3 = "privilage_view_guest"
-	group_index.allow.4 = "privilage_view_member"
-	
-	group_index.deny.0 = "privilage_view_special"
-	
-	news_index.allow.0 = "search"
-	news_index.allow.1 = "privilage_view_guest"
-	news_index.allow.2 = "index"
-	news_index.allow.3 = "display"
-	news_index.allow.4 = "privilage_view_member"
-	news_index.allow.5 = "category"
-	news_index.allow.6 = "list"
-	news_index.allow.7 = "add-comment"
-	
-	news_index.deny.0 = "privilage_view_special"
-	
-	page_index.allow.0 = "privilage_view_member"
-	page_index.allow.1 = "page"
-	page_index.allow.2 = "privilage_view_guest"
-	page_index.allow.3 = "index"
-	
-	page_index.deny.0 = "privilage_view_special"
-	
-	product_image.allow.0 = "thumb"
-	
-	product_index.allow.0 = ""
-	
-	user_auth.allow.0 = ""
-	
-	user_index.allow.0 = ""
-	
-	user_user.allow.0 = ""
-	
-	
 [guest]
 	calendar_index.allow.0 = ""
 	
@@ -217,28 +160,28 @@
 	
 	group_image.allow.0 = "thumb"
 	
+	group_index.allow.0 = "gallery"
+	group_index.allow.1 = "privilage_view_guest"
+	group_index.allow.2 = "display"
+	group_index.allow.3 = "index"
+	
 	group_index.deny.0 = "privilage_view_member"
 	group_index.deny.1 = "privilage_view_special"
 	
-	group_index.allow.0 = "display"
-	group_index.allow.1 = "index"
-	group_index.allow.2 = "gallery"
-	group_index.allow.3 = "privilage_view_guest"
-	
-	news_index.allow.0 = "privilage_view_guest"
-	news_index.allow.1 = "display"
-	news_index.allow.2 = "search"
-	news_index.allow.3 = "category"
-	news_index.allow.4 = "index"
-	news_index.allow.5 = "list"
-	news_index.allow.6 = "add-comment"
+	news_index.allow.0 = "add-comment"
+	news_index.allow.1 = "privilage_view_guest"
+	news_index.allow.2 = "display"
+	news_index.allow.3 = "search"
+	news_index.allow.4 = "category"
+	news_index.allow.5 = "index"
+	news_index.allow.6 = "list"
 	
 	news_index.deny.0 = "privilage_view_member"
 	news_index.deny.1 = "privilage_view_special"
 	
-	page_index.allow.0 = "page"
-	page_index.allow.1 = "privilage_view_guest"
-	page_index.allow.2 = "index"
+	page_index.allow.0 = "privilage_view_guest"
+	page_index.allow.1 = "index"
+	page_index.allow.2 = "page"
 	
 	page_index.deny.0 = "privilage_view_member"
 	page_index.deny.1 = "privilage_view_special"
@@ -255,5 +198,73 @@
 	user_index.allow.0 = ""
 	
 	user_user.allow.0 = "display"
+	
+	
+[member]
+	catalog_index.allow.0 = ""
+	
+	catalog_management.allow.0 = "imagedelete"
+	catalog_management.allow.1 = "time"
+	catalog_management.allow.2 = "edit"
+	catalog_management.allow.3 = "service"
+	catalog_management.allow.4 = "images"
+	catalog_management.allow.5 = "index"
+	catalog_management.allow.6 = "imageupload"
+	catalog_management.allow.7 = "imagemain"
+	
+	catalog_management.deny.0 = "privilage_moderate"
+	
+	default_actions.allow.0 = ""
+	
+	default_error.allow.0 = ""
+	
+	default_index.allow.0 = ""
+	
+	gallery_image.allow.0 = "thumb"
+	
+	gallery_index.deny.0 = "privilage_view_special"
+	
+	gallery_index.allow.0 = "gallery"
+	gallery_index.allow.1 = "privilage_view_guest"
+	gallery_index.allow.2 = "index"
+	gallery_index.allow.3 = "privilage_view_member"
+	
+	group_image.allow.0 = "thumb"
+	
+	group_index.deny.0 = "privilage_view_special"
+	
+	group_index.allow.0 = "index"
+	group_index.allow.1 = "gallery"
+	group_index.allow.2 = "privilage_view_guest"
+	group_index.allow.3 = "privilage_view_member"
+	group_index.allow.4 = "display"
+	
+	news_index.deny.0 = "privilage_view_special"
+	
+	news_index.allow.0 = "category"
+	news_index.allow.1 = "index"
+	news_index.allow.2 = "list"
+	news_index.allow.3 = "add-comment"
+	news_index.allow.4 = "privilage_view_guest"
+	news_index.allow.5 = "display"
+	news_index.allow.6 = "privilage_view_member"
+	news_index.allow.7 = "search"
+	
+	page_index.allow.0 = "index"
+	page_index.allow.1 = "page"
+	page_index.allow.2 = "privilage_view_guest"
+	page_index.allow.3 = "privilage_view_member"
+	
+	page_index.deny.0 = "privilage_view_special"
+	
+	product_image.allow.0 = "thumb"
+	
+	product_index.allow.0 = ""
+	
+	user_auth.allow.0 = ""
+	
+	user_index.allow.0 = ""
+	
+	user_user.allow.0 = ""
 	
 	
