--- a/trunk/configuration/router.ini
+++ b/trunk/configuration/router.ini
@@ -40,6 +40,11 @@ catalogMapJSONData.defaults.controller 			= "index"
 catalogMapJSONData.defaults.action 				= "mapdata"
 catalogMapJSONData.defaults.format	 			= "json"
 
+catalogSearch.route 						= "/szukaj/*"
+catalogSearch.defaults.module 				= "catalog"
+catalogSearch.defaults.controller 			= "index"
+catalogSearch.defaults.action 				= "search"
+
 page.route 						= ":language_url/strona/:url"
 page.defaults.module 			= "page"
 page.defaults.controller 		= "index"
