--- a/trunk/modules/catalog/config.ini
+++ b/trunk/modules/catalog/config.ini
@@ -22,7 +22,8 @@ image.resize.type.logo.x = "250"
 image.resize.type.logo.y = "60"
 image.resize.type.logo.style = "max"
 
-image.resize.type.logo.y = "60"
+image.resize.type.logo1.x = "250"
+image.resize.type.logo1.y = "160"
 image.resize.type.logo1.style = "max"
 
 image.resize.type.thumb1.x = "80"
