--- a/configuration/acl.ini
+++ b/configuration/acl.ini
@@ -151,12 +151,12 @@
 	gallery_image.allow.0 = "thumb"
 	gallery_image.allow.1 = "upload"
 	
-	gallery_index.deny.0 = "privilage_view_member"
-	gallery_index.deny.1 = "privilage_view_special"
-	
 	gallery_index.allow.0 = "gallery"
 	gallery_index.allow.1 = "index"
 	gallery_index.allow.2 = "privilage_view_guest"
+	
+	gallery_index.deny.0 = "privilage_view_member"
+	gallery_index.deny.1 = "privilage_view_special"
 	
 	group_image.allow.0 = "thumb"
 	
@@ -168,13 +168,13 @@
 	group_index.deny.0 = "privilage_view_member"
 	group_index.deny.1 = "privilage_view_special"
 	
-	news_index.allow.0 = "add-comment"
-	news_index.allow.1 = "privilage_view_guest"
-	news_index.allow.2 = "display"
-	news_index.allow.3 = "search"
-	news_index.allow.4 = "category"
-	news_index.allow.5 = "index"
-	news_index.allow.6 = "list"
+	news_index.allow.0 = "category"
+	news_index.allow.1 = "index"
+	news_index.allow.2 = "list"
+	news_index.allow.3 = "add-comment"
+	news_index.allow.4 = "privilage_view_guest"
+	news_index.allow.5 = "display"
+	news_index.allow.6 = "search"
 	
 	news_index.deny.0 = "privilage_view_member"
 	news_index.deny.1 = "privilage_view_special"
@@ -188,10 +188,10 @@
 	
 	product_image.allow.0 = "thumb"
 	
-	product_index.allow.0 = "product"
-	product_index.allow.1 = "index"
-	product_index.allow.2 = "category"
-	product_index.allow.3 = "manufacturer"
+	product_index.allow.0 = "category"
+	product_index.allow.1 = "manufacturer"
+	product_index.allow.2 = "product"
+	product_index.allow.3 = "index"
 	
 	user_auth.allow.0 = ""
 	
@@ -205,12 +205,13 @@
 	
 	catalog_management.allow.0 = "imagedelete"
 	catalog_management.allow.1 = "time"
-	catalog_management.allow.2 = "edit"
-	catalog_management.allow.3 = "service"
-	catalog_management.allow.4 = "images"
-	catalog_management.allow.5 = "index"
+	catalog_management.allow.2 = "options"
+	catalog_management.allow.3 = "edit"
+	catalog_management.allow.4 = "service"
+	catalog_management.allow.5 = "images"
 	catalog_management.allow.6 = "imageupload"
-	catalog_management.allow.7 = "imagemain"
+	catalog_management.allow.7 = "index"
+	catalog_management.allow.8 = "imagemain"
 	
 	catalog_management.deny.0 = "privilage_moderate"
 	
@@ -222,16 +223,14 @@
 	
 	gallery_image.allow.0 = "thumb"
 	
+	gallery_index.allow.0 = "privilage_view_member"
+	gallery_index.allow.1 = "gallery"
+	gallery_index.allow.2 = "index"
+	gallery_index.allow.3 = "privilage_view_guest"
+	
 	gallery_index.deny.0 = "privilage_view_special"
 	
-	gallery_index.allow.0 = "gallery"
-	gallery_index.allow.1 = "privilage_view_guest"
-	gallery_index.allow.2 = "index"
-	gallery_index.allow.3 = "privilage_view_member"
-	
 	group_image.allow.0 = "thumb"
-	
-	group_index.deny.0 = "privilage_view_special"
 	
 	group_index.allow.0 = "index"
 	group_index.allow.1 = "gallery"
@@ -239,21 +238,23 @@
 	group_index.allow.3 = "privilage_view_member"
 	group_index.allow.4 = "display"
 	
+	group_index.deny.0 = "privilage_view_special"
+	
 	news_index.deny.0 = "privilage_view_special"
 	
 	news_index.allow.0 = "category"
 	news_index.allow.1 = "index"
 	news_index.allow.2 = "list"
 	news_index.allow.3 = "add-comment"
-	news_index.allow.4 = "privilage_view_guest"
-	news_index.allow.5 = "display"
+	news_index.allow.4 = "display"
+	news_index.allow.5 = "privilage_view_guest"
 	news_index.allow.6 = "privilage_view_member"
 	news_index.allow.7 = "search"
 	
-	page_index.allow.0 = "index"
-	page_index.allow.1 = "page"
-	page_index.allow.2 = "privilage_view_guest"
-	page_index.allow.3 = "privilage_view_member"
+	page_index.allow.0 = "page"
+	page_index.allow.1 = "privilage_view_guest"
+	page_index.allow.2 = "privilage_view_member"
+	page_index.allow.3 = "index"
 	
 	page_index.deny.0 = "privilage_view_special"
 	
