--- a/trunk/modules/gallery/gallery.ini
+++ b/trunk/modules/gallery/gallery.ini
@@ -3,7 +3,7 @@ add.elements.name.options.label 					= "Nazwa"
 add.elements.name.options.required					= true
 add.elements.url.options.label 						= "Adres URL"
 add.elements.url.options.required					= true
-add.elements.description.options.label 				= "Opis"
+;add.elements.description.options.label 				= "Opis"
 add.elements.t_create.options.label					= "Czas utworzenia"
 add.elements.t_create.validators.date.validator 	= "Date"
 add.elements.t_create.options.required				= true
@@ -29,7 +29,7 @@ edit.elements.name.options.label 					= "Nazwa"
 edit.elements.name.options.required					= true
 edit.elements.url.options.label 					= "Adres URL"
 edit.elements.url.options.required					= true
-edit.elements.description.options.label 			= "Opis"
+;edit.elements.description.options.label 			= "Opis"
 edit.elements.t_create.options.label				= "Czas utworzenia"
 edit.elements.t_create.validators.date.validator 	= "Date"
 edit.elements.t_create.options.required				= true
