--- a/trunk/modules/group/group.ini
+++ b/trunk/modules/group/group.ini
@@ -13,8 +13,8 @@ add.elements.url.options.label 		= "Adres URL"
 add.elements.description.options.label 	= "Opis"
 add.elements.t_create.options.label 	= "Czas utworzenia"
 
-add.elements.redirect.options.label 		= "Przekierowanie"
-add.elements.redirect.options.description 	= "Adres www, na który będzie przenosić strona po kliknięciu"
+;add.elements.redirect.options.label 		= "Przekierowanie"
+;add.elements.redirect.options.description 	= "Adres www, na który będzie przenosić strona po kliknięciu"
 
 edit.elements.visible.type = "select"
 edit.elements.visible.options.label = "Widoczność"
@@ -30,5 +30,5 @@ edit.elements.url.options.label 	= "Adres URL"
 edit.elements.description.options.label	= "Opis"
 edit.elements.t_create.options.label	= "Czas utworzenia"
 
-edit.elements.redirect.options.label 		= "Przekierowanie"
-edit.elements.redirect.options.description 	= "Adres www, na który będzie przenosić strona po kliknięciu"
+;edit.elements.redirect.options.label 		= "Przekierowanie"
+;edit.elements.redirect.options.description 	= "Adres www, na który będzie przenosić strona po kliknięciu"
