--- a/trunk/configuration/acl.ini
+++ b/trunk/configuration/acl.ini
@@ -34,6 +34,10 @@
 	
 	catalog_servicecost.allow.0 = ""
 	
+	catalog_staff.allow.0 = ""
+	
+	catalog_staffhas.allow.0 = ""
+	
 	catalog_time.allow.0 = ""
 	
 	catalog_type.allow.0 = ""
@@ -151,47 +155,47 @@
 	gallery_image.allow.0 = "thumb"
 	gallery_image.allow.1 = "upload"
 	
+	gallery_index.deny.0 = "privilage_view_member"
+	gallery_index.deny.1 = "privilage_view_special"
+	
 	gallery_index.allow.0 = "gallery"
 	gallery_index.allow.1 = "index"
 	gallery_index.allow.2 = "privilage_view_guest"
 	
-	gallery_index.deny.0 = "privilage_view_member"
-	gallery_index.deny.1 = "privilage_view_special"
-	
 	group_image.allow.0 = "thumb"
 	
-	group_index.allow.0 = "gallery"
-	group_index.allow.1 = "privilage_view_guest"
-	group_index.allow.2 = "display"
-	group_index.allow.3 = "index"
+	group_index.allow.0 = "privilage_view_guest"
+	group_index.allow.1 = "display"
+	group_index.allow.2 = "index"
+	group_index.allow.3 = "gallery"
 	
 	group_index.deny.0 = "privilage_view_member"
 	group_index.deny.1 = "privilage_view_special"
 	
-	news_index.allow.0 = "category"
-	news_index.allow.1 = "index"
-	news_index.allow.2 = "list"
-	news_index.allow.3 = "add-comment"
-	news_index.allow.4 = "privilage_view_guest"
-	news_index.allow.5 = "display"
-	news_index.allow.6 = "search"
+	news_index.allow.0 = "privilage_view_guest"
+	news_index.allow.1 = "display"
+	news_index.allow.2 = "search"
+	news_index.allow.3 = "category"
+	news_index.allow.4 = "index"
+	news_index.allow.5 = "list"
+	news_index.allow.6 = "add-comment"
 	
 	news_index.deny.0 = "privilage_view_member"
 	news_index.deny.1 = "privilage_view_special"
 	
-	page_index.allow.0 = "privilage_view_guest"
-	page_index.allow.1 = "index"
-	page_index.allow.2 = "page"
+	page_index.deny.0 = "privilage_view_special"
+	page_index.deny.1 = "privilage_view_member"
 	
-	page_index.deny.0 = "privilage_view_member"
-	page_index.deny.1 = "privilage_view_special"
+	page_index.allow.0 = "index"
+	page_index.allow.1 = "page"
+	page_index.allow.2 = "privilage_view_guest"
 	
 	product_image.allow.0 = "thumb"
 	
-	product_index.allow.0 = "category"
-	product_index.allow.1 = "manufacturer"
-	product_index.allow.2 = "product"
-	product_index.allow.3 = "index"
+	product_index.allow.0 = "product"
+	product_index.allow.1 = "index"
+	product_index.allow.2 = "category"
+	product_index.allow.3 = "manufacturer"
 	
 	user_auth.allow.0 = ""
 	
@@ -203,15 +207,16 @@
 [member]
 	catalog_index.allow.0 = ""
 	
-	catalog_management.allow.0 = "imagedelete"
-	catalog_management.allow.1 = "time"
-	catalog_management.allow.2 = "options"
-	catalog_management.allow.3 = "edit"
-	catalog_management.allow.4 = "service"
-	catalog_management.allow.5 = "images"
-	catalog_management.allow.6 = "imageupload"
-	catalog_management.allow.7 = "index"
-	catalog_management.allow.8 = "imagemain"
+	catalog_management.allow.0 = "options"
+	catalog_management.allow.1 = "edit"
+	catalog_management.allow.2 = "service"
+	catalog_management.allow.3 = "images"
+	catalog_management.allow.4 = "imageupload"
+	catalog_management.allow.5 = "index"
+	catalog_management.allow.6 = "imagemain"
+	catalog_management.allow.7 = "imagedelete"
+	catalog_management.allow.8 = "staff"
+	catalog_management.allow.9 = "time"
 	
 	catalog_management.deny.0 = "privilage_moderate"
 	
@@ -223,38 +228,38 @@
 	
 	gallery_image.allow.0 = "thumb"
 	
-	gallery_index.allow.0 = "privilage_view_member"
-	gallery_index.allow.1 = "gallery"
+	gallery_index.allow.0 = "gallery"
+	gallery_index.allow.1 = "privilage_view_guest"
 	gallery_index.allow.2 = "index"
-	gallery_index.allow.3 = "privilage_view_guest"
+	gallery_index.allow.3 = "privilage_view_member"
 	
 	gallery_index.deny.0 = "privilage_view_special"
 	
 	group_image.allow.0 = "thumb"
 	
-	group_index.allow.0 = "index"
-	group_index.allow.1 = "gallery"
-	group_index.allow.2 = "privilage_view_guest"
-	group_index.allow.3 = "privilage_view_member"
-	group_index.allow.4 = "display"
+	group_index.allow.0 = "gallery"
+	group_index.allow.1 = "privilage_view_guest"
+	group_index.allow.2 = "privilage_view_member"
+	group_index.allow.3 = "display"
+	group_index.allow.4 = "index"
 	
 	group_index.deny.0 = "privilage_view_special"
-	
-	news_index.deny.0 = "privilage_view_special"
 	
 	news_index.allow.0 = "category"
 	news_index.allow.1 = "index"
 	news_index.allow.2 = "list"
 	news_index.allow.3 = "add-comment"
-	news_index.allow.4 = "display"
-	news_index.allow.5 = "privilage_view_guest"
+	news_index.allow.4 = "privilage_view_guest"
+	news_index.allow.5 = "display"
 	news_index.allow.6 = "privilage_view_member"
 	news_index.allow.7 = "search"
 	
-	page_index.allow.0 = "page"
-	page_index.allow.1 = "privilage_view_guest"
-	page_index.allow.2 = "privilage_view_member"
-	page_index.allow.3 = "index"
+	news_index.deny.0 = "privilage_view_special"
+	
+	page_index.allow.0 = "index"
+	page_index.allow.1 = "page"
+	page_index.allow.2 = "privilage_view_guest"
+	page_index.allow.3 = "privilage_view_member"
 	
 	page_index.deny.0 = "privilage_view_special"
 	
