--- a/trunk/configuration/acl.ini
+++ b/trunk/configuration/acl.ini
@@ -155,47 +155,47 @@
 	gallery_image.allow.0 = "thumb"
 	gallery_image.allow.1 = "upload"
 	
-	gallery_index.deny.0 = "privilage_view_member"
-	gallery_index.deny.1 = "privilage_view_special"
-	
 	gallery_index.allow.0 = "gallery"
 	gallery_index.allow.1 = "index"
 	gallery_index.allow.2 = "privilage_view_guest"
 	
+	gallery_index.deny.0 = "privilage_view_member"
+	gallery_index.deny.1 = "privilage_view_special"
+	
 	group_image.allow.0 = "thumb"
 	
-	group_index.allow.0 = "privilage_view_guest"
-	group_index.allow.1 = "display"
-	group_index.allow.2 = "index"
-	group_index.allow.3 = "gallery"
+	group_index.allow.0 = "gallery"
+	group_index.allow.1 = "privilage_view_guest"
+	group_index.allow.2 = "display"
+	group_index.allow.3 = "index"
 	
 	group_index.deny.0 = "privilage_view_member"
 	group_index.deny.1 = "privilage_view_special"
 	
-	news_index.allow.0 = "privilage_view_guest"
-	news_index.allow.1 = "display"
-	news_index.allow.2 = "search"
-	news_index.allow.3 = "category"
-	news_index.allow.4 = "index"
-	news_index.allow.5 = "list"
-	news_index.allow.6 = "add-comment"
+	news_index.allow.0 = "category"
+	news_index.allow.1 = "index"
+	news_index.allow.2 = "list"
+	news_index.allow.3 = "add-comment"
+	news_index.allow.4 = "privilage_view_guest"
+	news_index.allow.5 = "display"
+	news_index.allow.6 = "search"
 	
 	news_index.deny.0 = "privilage_view_member"
 	news_index.deny.1 = "privilage_view_special"
 	
-	page_index.deny.0 = "privilage_view_special"
-	page_index.deny.1 = "privilage_view_member"
+	page_index.allow.0 = "privilage_view_guest"
+	page_index.allow.1 = "index"
+	page_index.allow.2 = "page"
 	
-	page_index.allow.0 = "index"
-	page_index.allow.1 = "page"
-	page_index.allow.2 = "privilage_view_guest"
+	page_index.deny.0 = "privilage_view_member"
+	page_index.deny.1 = "privilage_view_special"
 	
 	product_image.allow.0 = "thumb"
 	
-	product_index.allow.0 = "product"
-	product_index.allow.1 = "index"
-	product_index.allow.2 = "category"
-	product_index.allow.3 = "manufacturer"
+	product_index.allow.0 = "manufacturer"
+	product_index.allow.1 = "product"
+	product_index.allow.2 = "index"
+	product_index.allow.3 = "category"
 	
 	user_auth.allow.0 = ""
 	
@@ -207,16 +207,18 @@
 [member]
 	catalog_index.allow.0 = ""
 	
-	catalog_management.allow.0 = "options"
-	catalog_management.allow.1 = "edit"
-	catalog_management.allow.2 = "service"
-	catalog_management.allow.3 = "images"
+	catalog_management.allow.0 = "staffdelete"
+	catalog_management.allow.1 = "service"
+	catalog_management.allow.2 = "images"
+	catalog_management.allow.3 = "index"
 	catalog_management.allow.4 = "imageupload"
-	catalog_management.allow.5 = "index"
-	catalog_management.allow.6 = "imagemain"
-	catalog_management.allow.7 = "imagedelete"
-	catalog_management.allow.8 = "staff"
-	catalog_management.allow.9 = "time"
+	catalog_management.allow.5 = "imagemain"
+	catalog_management.allow.6 = "imagedelete"
+	catalog_management.allow.7 = "staff"
+	catalog_management.allow.8 = "time"
+	catalog_management.allow.9 = "options"
+	catalog_management.allow.10 = "staffupdate"
+	catalog_management.allow.11 = "edit"
 	
 	catalog_management.deny.0 = "privilage_moderate"
 	
@@ -228,10 +230,10 @@
 	
 	gallery_image.allow.0 = "thumb"
 	
-	gallery_index.allow.0 = "gallery"
-	gallery_index.allow.1 = "privilage_view_guest"
-	gallery_index.allow.2 = "index"
-	gallery_index.allow.3 = "privilage_view_member"
+	gallery_index.allow.0 = "privilage_view_guest"
+	gallery_index.allow.1 = "index"
+	gallery_index.allow.2 = "privilage_view_member"
+	gallery_index.allow.3 = "gallery"
 	
 	gallery_index.deny.0 = "privilage_view_special"
 	
@@ -245,21 +247,21 @@
 	
 	group_index.deny.0 = "privilage_view_special"
 	
-	news_index.allow.0 = "category"
-	news_index.allow.1 = "index"
-	news_index.allow.2 = "list"
-	news_index.allow.3 = "add-comment"
-	news_index.allow.4 = "privilage_view_guest"
-	news_index.allow.5 = "display"
-	news_index.allow.6 = "privilage_view_member"
-	news_index.allow.7 = "search"
+	news_index.allow.0 = "add-comment"
+	news_index.allow.1 = "privilage_view_guest"
+	news_index.allow.2 = "display"
+	news_index.allow.3 = "privilage_view_member"
+	news_index.allow.4 = "search"
+	news_index.allow.5 = "category"
+	news_index.allow.6 = "index"
+	news_index.allow.7 = "list"
 	
 	news_index.deny.0 = "privilage_view_special"
 	
-	page_index.allow.0 = "index"
-	page_index.allow.1 = "page"
-	page_index.allow.2 = "privilage_view_guest"
-	page_index.allow.3 = "privilage_view_member"
+	page_index.allow.0 = "privilage_view_member"
+	page_index.allow.1 = "index"
+	page_index.allow.2 = "page"
+	page_index.allow.3 = "privilage_view_guest"
 	
 	page_index.deny.0 = "privilage_view_special"
 	
