--- a/trunk/configuration/acl.ini
+++ b/trunk/configuration/acl.ini
@@ -2,6 +2,16 @@
 [administrator]
 	admin_index.allow.0 = ""
 	
+	advertising_admin.allow.0 = ""
+	
+	advertising_advertise.allow.0 = ""
+	
+	advertising_block.allow.0 = ""
+	
+	advertising_client.allow.0 = ""
+	
+	advertising_type.allow.0 = ""
+	
 	calendar_admin.allow.0 = ""
 	
 	calendar_calendar.allow.0 = ""
@@ -152,15 +162,15 @@
 	
 	forms_index.allow.0 = ""
 	
-	gallery_image.allow.0 = "thumb"
-	gallery_image.allow.1 = "upload"
+	gallery_image.allow.0 = "upload"
+	gallery_image.allow.1 = "thumb"
+	
+	gallery_index.deny.0 = "privilage_view_member"
+	gallery_index.deny.1 = "privilage_view_special"
 	
 	gallery_index.allow.0 = "gallery"
 	gallery_index.allow.1 = "index"
 	gallery_index.allow.2 = "privilage_view_guest"
-	
-	gallery_index.deny.0 = "privilage_view_member"
-	gallery_index.deny.1 = "privilage_view_special"
 	
 	group_image.allow.0 = "thumb"
 	
@@ -172,30 +182,30 @@
 	group_index.deny.0 = "privilage_view_member"
 	group_index.deny.1 = "privilage_view_special"
 	
-	news_index.allow.0 = "category"
-	news_index.allow.1 = "index"
-	news_index.allow.2 = "list"
-	news_index.allow.3 = "add-comment"
-	news_index.allow.4 = "privilage_view_guest"
-	news_index.allow.5 = "display"
-	news_index.allow.6 = "search"
+	news_index.allow.0 = "privilage_view_guest"
+	news_index.allow.1 = "display"
+	news_index.allow.2 = "search"
+	news_index.allow.3 = "category"
+	news_index.allow.4 = "index"
+	news_index.allow.5 = "list"
+	news_index.allow.6 = "add-comment"
 	
 	news_index.deny.0 = "privilage_view_member"
 	news_index.deny.1 = "privilage_view_special"
 	
-	page_index.allow.0 = "privilage_view_guest"
-	page_index.allow.1 = "index"
-	page_index.allow.2 = "page"
-	
 	page_index.deny.0 = "privilage_view_member"
 	page_index.deny.1 = "privilage_view_special"
 	
+	page_index.allow.0 = "index"
+	page_index.allow.1 = "page"
+	page_index.allow.2 = "privilage_view_guest"
+	
 	product_image.allow.0 = "thumb"
 	
-	product_index.allow.0 = "manufacturer"
-	product_index.allow.1 = "product"
-	product_index.allow.2 = "index"
-	product_index.allow.3 = "category"
+	product_index.allow.0 = "product"
+	product_index.allow.1 = "index"
+	product_index.allow.2 = "category"
+	product_index.allow.3 = "manufacturer"
 	
 	user_auth.allow.0 = ""
 	
@@ -207,18 +217,18 @@
 [member]
 	catalog_index.allow.0 = ""
 	
-	catalog_management.allow.0 = "staffdelete"
-	catalog_management.allow.1 = "service"
-	catalog_management.allow.2 = "images"
-	catalog_management.allow.3 = "index"
-	catalog_management.allow.4 = "imageupload"
-	catalog_management.allow.5 = "imagemain"
-	catalog_management.allow.6 = "imagedelete"
-	catalog_management.allow.7 = "staff"
-	catalog_management.allow.8 = "time"
-	catalog_management.allow.9 = "options"
-	catalog_management.allow.10 = "staffupdate"
-	catalog_management.allow.11 = "edit"
+	catalog_management.allow.0 = "edit"
+	catalog_management.allow.1 = "staffdelete"
+	catalog_management.allow.2 = "service"
+	catalog_management.allow.3 = "images"
+	catalog_management.allow.4 = "index"
+	catalog_management.allow.5 = "imageupload"
+	catalog_management.allow.6 = "imagemain"
+	catalog_management.allow.7 = "imagedelete"
+	catalog_management.allow.8 = "staff"
+	catalog_management.allow.9 = "time"
+	catalog_management.allow.10 = "options"
+	catalog_management.allow.11 = "staffupdate"
 	
 	catalog_management.deny.0 = "privilage_moderate"
 	
