--- a/trunk/configuration/framework.ini
+++ b/trunk/configuration/framework.ini
@@ -19,6 +19,7 @@
 	controller.directory.group = "application/modules/group/controllers"
 	controller.directory.system = "application/modules/system/controllers"
 	controller.directory.catalog = "application/modules/catalog/controllers"
+        controller.directory.advertising = "application/modules/advertising/controllers"
 	
 	params.useDefaultControllerAlways = ""
 	
@@ -47,6 +48,7 @@
 	controller.directory.group = "../application/modules/group/controllers"
 	controller.directory.system = "../application/modules/system/controllers"
 	controller.directory.catalog = "../application/modules/catalog/controllers"
+        controller.directory.advertising = "../application/modules/advertising/controllers"
 	
 	params.useDefaultControllerAlways = ""
 	
